# microSALT

./: .gitignore  .gitlint  .travis.yml  DEPLOYMENT.md  MANIFEST.in  README.md  app.py  configExample.json  environment.yml  install.sh  pixi.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: standard_PR.md
.github/workflows/: python-package-conda.yml  run_tests.yml
instance/: paths_EXAMPLE.yml  sqlalchemy_config_EXAMPLE.py
locioser/: cli.py  core.py  data_sniffer.py  db_manipulator.py  job_creator.py  scraper.py  setup.py
microSALT/: .gitignore  __init__.py  app.py  cli.py  config.yml  db_manipulator.py  exporter.py  job_creator.py  lims_fetcher.py  manager.py  mysql.yml  page_core.py  paths.yml  requirements.txt  scraper.py
microSALT/app/: __init__.py  app.py  routs.py
microSALT/artwork/: microsalt.emf
microSALT/config/: paths_and_headers.yml
microSALT/configs/: config.yml
microSALT/dev/: OLDalignment_page.html  README.txt  needler_example.py
microSALT/exc/: exc.py
microSALT/microSALT/: cli.py
microSALT/reports/: __init__.py  app.py  views.py
microSALT/server/: app.py  views.py
microSALT/store/: database.py  db_manipulator.py  lims_fetcher.py  models.py  orm_models.py
templates/: sample_page.html  start_page.html
tests/: conftest.py  test_commands.py  test_config.py  test_database.py  test_functions.py  test_jobcreator.py  test_reporter.py  test_scraper.py  test_webserver.py  testdata.json
unique_references/: ExPEC.fsa
(+68 files in other folders)
