[project]
name = "microsalt"
version = "4.1.0"
description = "Microbial Sequence Analysis and Loci-based Typing pipeline"
authors = [
    {name = "Isak Sylvin",email = "isak.sylvin@scilifelab.se"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
homepage = "https://github.com/Clinical-Genomics/microSALT"
repository = "https://github.com/Clinical-Genomics/microSALT"
keywords = ["bioinformatics", "microbial", "sequence analysis", "typing"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
"pymysql (>=1.1.1,<2.0.0)",
"click (>=8.1.8,<9.0.0)",
"sqlalchemy (>=2.0.39,<3.0.0)",
"python-dateutil (>=2.9.0.post0,<3.0.0)",
"flask-sqlalchemy (>=3.1.1,<4.0.0)",
"biopython (>=1.85,<2.0)",
"rauth (>=0.7.3,<0.8.0)",
"bs4 (>=0.0.2,<0.0.3)",
"flask (>=3.1.0,<4.0.0)",
"genologics (==0.4.6)",
"pyyaml (>=6.0.2,<7.0.0)"
]

packages = [
  {include = "README.md"},
  {include = "microsalt/**/*"},
  {include = "tests/**/*"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
microsalt = "microsalt.cli:root"

[tool.poetry.group.dev.dependencies]
coverage = "^7.7.0"
flake8 = "^7.1.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
python-coveralls = "^2.9.3"
pylint = "^3.3.5"
mock = "^5.2.0"
yamllint = "^1.36.1"
